# px4_offb_ctrl

./: CMakeLists.txt  README.md  package.xml
data/: liftoff.txt  straight_ahead.txt  straight_ahead2.txt  straight_ahead3.txt  straight_ahead4.txt  takeoff3m.txt  takeoff3m10s.txt  takeoff3m20s.txt
include/px4_offb_ctrl/: px4_offb_ctrl.h
launch/: hardware_test.launch  hardware_test_2.launch  hardware_test_3.launch  offb_ctrl.launch  px4_offb_ctrl.launch  px4_offb_ctrl_hardware.launch  px4_offb_ctrl_sitl.launch  px4_offb_ctrl_sitl_test.launch  px4_offb_ctrl_test.launch  px4_rviz.launch
libbspline/: README.md
libbspline/cpp/: CMakeLists.txt  launch_single_and_full.bash  package.xml
libbspline/cpp/data/: cpy.txt  position.txt  posy.txt
libbspline/cpp/include/: bspline_utils.hpp  txt_reader.hpp
libbspline/cpp/test/: 1d_bspline.cpp  3d_bspline.cpp  3d_bspline_single.cpp  m_matrix.cpp  txt_reader.cpp
libbspline/matlab/: a1_get_single_m.m  a2_get_m.m  a3_bspline_1d_setup.m  b1_bspline_1d.m  b2_bspline_2d.m  b3_bspline_3d.m  b4_bspline_3d_function.m  c1_bspline_piecewise.m  c2_bspline_concatenate.m  c3_bspline_replanning.m  test_conc_ctrlpt_3d.mat  test_ctrlpt_1d.mat  test_ctrlpt_3d.mat
libbspline/matlab/functions/: get_m_matrix.m  get_single_m_matrix.m  get_uni_bspline_1d.m
libbspline/matlab/sample_data/: velocity.txt
libbspline/matlab/sample_data/test_1d/: control_point.txt
libbspline/matlab/sample_data/test_3d/: cpx.txt  cpz.txt  posx.txt  posz.txt  time.txt
libbspline/matlab/sample_data/test_conc_3d/: cp1_x.txt  cp1_y.txt  cp1_z.txt  cp2_x.txt  cp2_y.txt  cp2_z.txt  pos1_x.txt  pos1_y.txt  pos1_z.txt  pos2_x.txt  pos2_y.txt  pos2_z.txt
offboard_controller_lib/: .gitignore  CMakeLists.txt
offboard_controller_lib/include/: helper.h  offb_ctrl.h
offboard_controller_lib/src/: helper.cpp  offb_ctrl.cpp
rapid_traj_gen/: CMakeLists.txt
rviz/: display.rviz
scripts/: chk_timer.py  gui_manager.py  send_figure8_traj.py  send_figure8_traj_logging.py  send_figure8_traj_straightlevel.py  send_figure8_trajv2.py
src/: px4_offb_ctrl.cpp  px4_offb_ctrl_node.cpp  send_figure8_traj.py  traj_gen.cpp
srv/: takeoffExternal.srv
